<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fernando.proyectofinal.RegisterActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <include
        android:id="@+id/topPanel"
        layout="@layout/customtoolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:fillViewport="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">


        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.fernando.proyectofinal.RegisterActivity"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEditText"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <EditText
                android:id="@+id/birthDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/birthDate"
                android:inputType="date"
                android:onClick="showDatePickerDialog"
                app:layout_constraintLeft_toLeftOf="@+id/lastNameEditText"
                app:layout_constraintRight_toRightOf="@+id/lastNameEditText"
                app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/repeatEmail"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="@+id/repeatEmailEditText"
                app:layout_constraintRight_toRightOf="@+id/repeatEmailEditText"
                app:layout_constraintTop_toBottomOf="@+id/repeatEmailEditText"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <EditText
                android:id="@+id/repeatEmailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="@+id/birthDate"
                app:layout_constraintRight_toRightOf="@+id/birthDate"
                app:layout_constraintTop_toBottomOf="@+id/birthDate"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="@+id/emailEditText"
                app:layout_constraintRight_toRightOf="@+id/emailEditText"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <EditText
                android:id="@+id/repeatPasswordEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/repeatPassword"
                android:inputType="textPassword"
                app:layout_constraintLeft_toLeftOf="@+id/passwordEditText"
                app:layout_constraintRight_toRightOf="@+id/passwordEditText"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />

            <Button
                android:id="@+id/registerButtonAction"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/roundedbutton"
                android:elevation="4dp"
                android:onClick="registerUser"
                android:text="@string/registerText"
                android:textColor="@android:color/background_light"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/repeatPasswordEditText"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1" />


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>



